--- a/myproject/website/templates/website/home.html
+++ b/myproject/website/templates/website/home.html
@@ -4,12 +4,21 @@
 <head>
 	{% load static %}
 
-	<title>My Website</title>
+	<title>Stocks-App</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'website/style.css' %}">
 	<script type="text/javascript" src="{% static 'website/script.js' %}"></script>
+	<link href="https://api.fontshare.com/v2/css?f[]=clash-display@400&display=swap" rel="stylesheet">
 </head>
 <body>
-	<h1 class="hey">Welcome to my website!</h1>
-	<p>This is the home page.</p>
+	<div class="main">
+		<div class="nav">
+			<a href="{% url 'learn' %}">Learn</a>
+			<a href="{% url 'predict' %}">Predict</a>
+			<a href="{% url 'home' %}">Home</a>
+		</div>
+		
+
+
+	</div>
 </body>
 </html>
