--- a/myproject/website/static/website/style.css
+++ b/myproject/website/static/website/style.css
@@ -1,23 +1,82 @@
+/* basic boiler plate stuff so that i dont have to rewrite stuff anymore */
+
 *, html, body {
-    margin: 0;
-    padding: 0;
     font-family: 'Clash Display', sans-serif;
+    color: white;
+    font-size: 1rem;
 }
 
-.main{
+/* disable auto responsiveness */
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+.main {
     background-color: black;
-    color: white;
     width: 100%;
     height: 100vh;
     margin: 0;
     border: 0;
-    font-size: 1rem;
-    display:flex;
-    justify-content: center;
 }
 
-.nav{
-    display:flex;
-    gap:10px;
-    padding-top:100px;
+.main_video {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
 }
+
+.nav {
+    position: absolute;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    gap: 50px;
+    padding-top: 100px;
+}
+
+.nav a {
+    text-decoration: none;
+    font-size: 1rem;
+    color: white;
+}
+
+.nav a:hover {
+    color: #bee3d1;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+.content {
+    z-index: 500;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -90px;
+}
+
+.content h1{
+    font-family: 'Technor', sans-serif;
+    font-size: 100px;
+}
+
+
+   
+
+
