--- a/myproject/website/templates/website/home.html
+++ b/myproject/website/templates/website/home.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-
 <html>
 <head>
 	{% load static %}
-
 	<title>Stocks-App</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'website/style.css' %}">
 	<script type="text/javascript" src="{% static 'website/script.js' %}"></script>
 	<link href="https://api.fontshare.com/v2/css?f[]=clash-display@400&display=swap" rel="stylesheet">
+	<link href="https://api.fontshare.com/v2/css?f[]=technor@900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
 	<div class="main">
@@ -16,9 +16,17 @@
 			<a href="{% url 'predict' %}">Predict</a>
 			<a href="{% url 'home' %}">Home</a>
 		</div>
+		<div class="content">
+			<h1>Explore Stocks</h1>
+		</div>
+		<video class="main_video" autoplay loop muted>
+			<source src="{{ MEDIA_URL }}/media/videos/bg_video.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
+		<div class="overlay"></div>
+		<!-- HTML !-->
 		
-
-
+		
 	</div>
 </body>
 </html>
