--- a/myproject/website/static/website/style.css
+++ b/myproject/website/static/website/style.css
@@ -7,7 +7,7 @@
 }
 
 /* disable auto responsiveness */
-body {
+body,html {
     width: 100%;
     height: 100%;
     margin: 0;
@@ -37,7 +37,7 @@ body {
     justify-content: center;
     width: 100%;
     gap: 50px;
-    padding-top: 100px;
+    padding-top: 60px;
 }
 
 .nav a {
@@ -68,12 +68,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: -90px;
+    margin-top: -20px;
 }
 
 .content h1{
     font-family: 'Technor', sans-serif;
-    font-size: 100px;
+    font-size: 80px;
 }
 
 
