Added Backend Functionality Functions
These still have to be added to the website please refer docs for adding them to the website (predict functionality)

--- a/myproject/website/templates/website/predict.html
+++ b/myproject/website/templates/website/predict.html
@@ -20,7 +20,9 @@
         <a href="{% url 'predict' %}">Predict</a>
         <a href="{% url 'home' %}">Home</a>
     </div>
-    
+    <!-- myproject/website/templates/my_template.html -->
+
+
     <div class="predict">
    </body>
 </html>
