--- a/myproject/website/templates/website/learn.html
+++ b/myproject/website/templates/website/learn.html
@@ -35,7 +35,7 @@
                       <h3 class="card__title">Pengraph</h3>            
                     </div>
                   </div>
-                  <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+                  <p class="card__description">Pennant is a continuation pattern after a flagpole, signaling a potential trend continuation.</p>
                 </div>
               </a>      
             </li>
@@ -50,7 +50,7 @@
                         <h3 class="card__title">Flag Graph</h3>            
                       </div>
                     </div>
-                    <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+                    <p class="card__description">Flag patterns on stock charts signal potential trend continuations, with a period of consolidation after a price move.</p>
                   </div>
                 </a>      
               </li>
@@ -58,15 +58,15 @@
               <!-- wedge -->
               <li>
                 <a href="" class="card">
-                  <img src="https://i.imgur.com/oYiTqum.jpg" class="card__image" alt="" />
+                  <img src="{{ MEDIA_URL }}/media/images/wedge.png" class="card__image" alt="" />
                   <div class="card__overlay">
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
                       <div class="card__header-text">
-                        <h3 class="card__title">Jessica Parker</h3>            
+                        <h3 class="card__title">Wedge Graph</h3>            
                       </div>
                     </div>
-                    <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+                    <p class="card__description">Wedge patterns on stock charts signal potential trend reversals, with narrowing price movements and increasing volatility.</p>
                   </div>
                 </a>      
               </li>
