--- a/myproject/website/templates/website/learn.html
+++ b/myproject/website/templates/website/learn.html
@@ -80,10 +80,10 @@
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
                       <div class="card__header-text">
-                        <h3 class="card__title">Jessica Parker</h3>            
+                        <h3 class="card__title">Ascending Triangle Graph</h3>            
                       </div>
                     </div>
-                    <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+                    <p class="card__description">Bullish chart pattern with upward sloping resistance and horizontal support, indicating potential price breakout?</p>
                   </div>
                 </a>      
               </li>
@@ -98,10 +98,10 @@
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
                       <div class="card__header-text">
-                        <h3 class="card__title">Jessica Parker</h3>            
+                        <h3 class="card__title">Descending Triangle Graph</h3>            
                       </div>
                     </div>
-                    <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+                    <p class="card__description">Bearish chart pattern with downward sloping support and horizontal resistance, indicating potential price breakdown.</p>
                   </div>
                 </a>      
               </li>
@@ -115,10 +115,10 @@
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
                       <div class="card__header-text">
-                        <h3 class="card__title">Jessica Parker</h3>            
+                        <h3 class="card__title">Symmetrical Triangle Graph</h3>            
                       </div>
                     </div>
-                    <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+                    <p class="card__description">Neutral chart pattern with converging trend lines, indicating potential price breakout in either direction.</p>
                   </div>
                 </a>      
               </li>
@@ -131,10 +131,10 @@
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
                       <div class="card__header-text">
-                        <h3 class="card__title">Jessica Parker</h3>            
+                        <h3 class="card__title">Cup and Handle Graph</h3>            
                       </div>
                     </div>
-                    <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+                    <p class="card__description">Bullish chart pattern with a rounded cup and a handle, indicating potential price continuation.</p>
                   </div>
                 </a>      
               </li>
