--- a/myproject/website/templates/website/learn/flag.html
+++ b/myproject/website/templates/website/learn/flag.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{% static 'website/style.css' %}">
+	<script type="text/javascript" src="{% static 'website/script.js' %}"></script>
+	<link href="https://api.fontshare.com/v2/css?f[]=clash-display@400&display=swap" rel="stylesheet">
+	<link href="https://api.fontshare.com/v2/css?f[]=technor@900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
     <title>Document</title>
 </head>
-<body>
-    <h1>flag Graph</h1>
-</body>
+<body class="learn_graphs">
+    <div class="nav">
+        <a href="{% url 'learn' %}">Learn</a>
+        <a href="{% url 'predict' %}">Predict</a>
+        <a href="{% url 'home' %}">Home</a>
+    </div>
+    <div class="learn_graph_main_image">
+        <img src="https://images.unsplash.com/photo-1681175657334-cf44b8706d83?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDZ8eEh4WVRNSExnT2N8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60" alt="rando">
+    </div>
 </html>
