--- a/myproject/website/templates/website/learn.html
+++ b/myproject/website/templates/website/learn.html
@@ -75,7 +75,7 @@
 
               <li>
                 <a href="" class="card">
-                  <img src="https://i.imgur.com/oYiTqum.jpg" class="card__image" alt="" />
+                  <img src="{{MEDIA_URL}}/media/images/ascending.png"class="card__image" alt=""/>
                   <div class="card__overlay">
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
@@ -146,10 +146,10 @@
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
                       <div class="card__header-text">
-                        <h3 class="card__title">Jessica Parker</h3>            
+                        <h3 class="card__title">Head N Shoulders Graph</h3>            
                       </div>
                     </div>
-                    <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+                    <p class="card__description">Bearish chart pattern with a peak (head) and two lower peaks (shoulders), indicating potential price reversal.</p>
                   </div>
                 </a>      
               </li>
