--- a/myproject/website/templates/website/learn.html
+++ b/myproject/website/templates/website/learn.html
@@ -93,7 +93,7 @@
               
               <li>
                 <a href="" class="card">
-                  <img src="https://i.imgur.com/oYiTqum.jpg" class="card__image" alt="" />
+                  <img src="{{MEDIA_URL}}/media/images/descending.png"class="card__image" alt=""/>
                   <div class="card__overlay">
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
@@ -110,7 +110,7 @@
 
               <li>
                 <a href="" class="card">
-                  <img src="https://i.imgur.com/oYiTqum.jpg" class="card__image" alt="" />
+                  <img src="{{MEDIA_URL}}/media/images/symmetrical_triangle.png"class="card__image" alt=""/>
                   <div class="card__overlay">
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
@@ -126,7 +126,7 @@
               <!-- Cup and Handle -->
               <li>
                 <a href="" class="card">
-                  <img src="https://i.imgur.com/oYiTqum.jpg" class="card__image" alt="" />
+                  <img src="{{MEDIA_URL}}/media/images/cup&handle.png"class="card__image" alt=""/>
                   <div class="card__overlay">
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
@@ -141,7 +141,7 @@
               <!-- Head N Shoulder -->
               <li>
                 <a href="" class="card">
-                  <img src="https://i.imgur.com/oYiTqum.jpg" class="card__image" alt="" />
+                  <img src="{{MEDIA_URL}}/media/images/headNshoulders.png"class="card__image" alt=""/>
                   <div class="card__overlay">
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
@@ -157,15 +157,15 @@
 
               <li>
                 <a href="" class="card">
-                  <img src="https://i.imgur.com/oYiTqum.jpg" class="card__image" alt="" />
+                  <img src="{{MEDIA_URL}}/media/images/double_top_bottom.png"class="card__image" alt=""/>
                   <div class="card__overlay">
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
                       <div class="card__header-text">
-                        <h3 class="card__title">Jessica Parker</h3>            
+                        <h3 class="card__title">Double Top and Bottom Graph</h3>            
                       </div>
                     </div>
-                    <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+                    <p class="card__description">Bullish (double bottom) or bearish (double top) chart pattern with two price highs or lows, indicating potential price reversal.</p>
                   </div>
                 </a>      
               </li>
@@ -174,15 +174,15 @@
 
               <li>
                 <a href="" class="card">
-                  <img src="https://i.imgur.com/oYiTqum.jpg" class="card__image" alt="" />
+                  <img src="{{MEDIA_URL}}/media/images/gaps.png"class="card__image" alt=""/>
                   <div class="card__overlay">
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
                       <div class="card__header-text">
-                        <h3 class="card__title">Jessica Parker</h3>            
+                        <h3 class="card__title">Gaps Graph</h3>            
                       </div>
                     </div>
-                    <p class="card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+                    <p class="card__description">A gap occurs when the stock's price jumps over one or more trading periods, indicating potential momentum or trend change.</p>
                   </div>
                 </a>      
               </li>
