Added the smooth flow effect in the flag.html and linked the card for flag.html on learn
Pending stuff-
to add the smooth flow and content for the other pages
to add the video for the other pages
and too link the buttons on learn more to predict page
add predict funtionality also

--- a/myproject/website/templates/website/learn.html
+++ b/myproject/website/templates/website/learn.html
@@ -42,7 +42,7 @@
 
             <!-- Flag -->
             <li>
-                <a href="" class="card">
+                <a  href="{% url 'flag' %}"  class="card">
                     <img src="{{ MEDIA_URL }}/media/images/flaggraph.png" class="card__image" alt="" />
                   <div class="card__overlay">
                     <div class="card__header">
