--- a/myproject/website/static/website/style.css
+++ b/myproject/website/static/website/style.css
@@ -237,24 +237,149 @@ body,html {
 
   /* learn graphs every page code  */
   /* flag.html */
-  .learn_graphs {
+  /* .basic_body {
     background-color: black;
   }
-
   
-.learn_graph_main_image img{
-  width: 500px;
-  margin: 0 auto;
-  display: block;
-  border-radius:6%;
+  .heading_graphs,
+  .video_about {
+    margin: 0 auto;
+    width: 50%;
+    text-align: center;
+  }
+  
+  .heading_graphs {
+    padding-top: 200px;
+  }
+  
+   */
 
-}
-
-
-.learn_graph_main_image {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  height: 100vh;
-}
+   * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  :root {
+    --secondary-color: #151226;
+    --contrast-color: #BF307F;
+  }
+  .graph_overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    z-index: -10;
+    background-color: var(--contrast-color);
+  }
+  
+  .graph_container {
+    display: flex;
+    height: 100vh;
+    justify-content: space-around;
+    align-items: center;
+    color: #fff;
+    animation: expand .8s ease forwards;
+    background-color: var(--secondary-color);
+    position: relative;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    transition: all .8s ease;
+  }
+  
+  .graph_container_content {
+   width: 50%;
+  }
+  
+  .graph_container_content_inner {
+    width: 80%;
+    margin-left: 150px;
+    padding-left: 100px;
+  }
+  
+  .graph_container_outer_img {
+    margin: 50px;
+    width: 50%;
+    overflow: hidden;
+  }   
+      
+  .graph_container_img  {
+    width: 100%;
+    padding-top: 500px;
+    animation: slideIn 1.5s ease-in-out forwards;
+  }
+  
+  .graph_par {
+    height: auto;
+    overflow: hidden;
+  }
+  
+  .graph_p{
+    line-height: 28px;
+    transform: translateY(300px);
+    animation: slideUp .8s ease-in-out forwards .8s;
+  }
+  
+  .graph_btns {
+    height: 100%;
+    position: relative;
+    width: 150px;
+    overflow: hidden;
+  }
+  
+  .graph_btns_more {
+    background: transparent;
+    border: 1px solid var(--contrast-color);
+    border-radius: 50px;
+    padding: 8px 12px;
+    color: #BF307F;
+    font-size: 16px;
+    text-transform: uppercase;
+    position: relative;
+    margin-top: 15px;
+    outline: none;
+    transform: translateY(50px);
+    animation: slideUp .8s ease-in-out  forwards 1s;
+  }
+  
+  .graph_title {
+    overflow: hidden;
+    height: auto;
+  }
+  
+  .graph_h1 {
+      font-size: 40px;
+      color: var(--contrast-color);
+      margin-bottom: 20px;
+      transform: translateY(100px);
+      animation: slideUp .8s ease forwards .5s;
+  }
+  
+  @keyframes slideIn {
+    0% {
+      transform: translateX(500px) scale(.2);
+    }
+    100% {
+      transform: translateX(0px) scale(1);
+    }
+  }
+  
+  @keyframes slideUp {
+    0% {
+      transform: translateY(300px);
+    }
+    100% {
+      transform: translateY(0px);
+    }
+  }
+  
+  @keyframes expand {
+    0% {
+      transform: translateX(1400px);
+    }
+    100% {
+      transform: translateX(0px);
+    }
+  }
+  
