--- a/myproject/website/templates/website/learn/flag.html
+++ b/myproject/website/templates/website/learn/flag.html
@@ -12,15 +12,59 @@
 	<link href="https://api.fontshare.com/v2/css?f[]=technor@900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
-    <title>Document</title>
 </head>
-<body class="learn_graphs">
+<body>
+<!-- 
     <div class="nav">
         <a href="{% url 'learn' %}">Learn</a>
         <a href="{% url 'predict' %}">Predict</a>
         <a href="{% url 'home' %}">Home</a>
     </div>
-    <div class="learn_graph_main_image">
-        <img src="https://images.unsplash.com/photo-1681175657334-cf44b8706d83?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDZ8eEh4WVRNSExnT2N8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60" alt="rando">
+    <div class="heading_graphs">
+    <h1>what is flag graph</h1>
+    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat error quas nostrum cumque dignissimos deserunt! Consectetur expedita quisquam rerum aliquam iusto neque fugit consequuntur eaque iste! Ducimus accusantium cum eveniet?</p>
     </div>
+    <div class="video_about">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/XfqOB4hvxlY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div> -->
+
+    <body>
+        <div class="nav">
+            <a href="{% url 'learn' %}">Learn</a>
+            <a href="{% url 'predict' %}">Predict</a>
+            <a href="{% url 'home' %}">Home</a>
+        </div>
+        
+        <div class= 'graph_container'>
+            <div class="graph_container_content">
+            <div class="graph_container_content_inner">
+            <div class="graph_title">
+              <h1 class="graph_h1">flag Graph</h1>
+            </div>
+            <div class="graph_par">
+            <p class="graph_p">
+            Cupiditate alias odio omnis minima veritatis saepe porro, repellendus natus vitae, sequi exercitationem ipsam, qui possimus sit eveniet laborum sapiente quisquam quae neque velit? 
+            </p>
+            </div>
+            <div class="graph_btns">
+            <button class='graph_btns_more'> See more </button>
+            </div>
+            </div>
+            </div>
+             <div class="graph_container_outer_img">
+             <div class="graph_img-inner">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/XfqOB4hvxlY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
+        </div>
+              </div>
+            <div class="graph_overlay"></div>
+      </body>
+
+
+
+
+
+
+</body>
 </html>
