--- a/myproject/website/templates/website/learn/flag.html
+++ b/myproject/website/templates/website/learn/flag.html
@@ -54,7 +54,7 @@
             </div>
              <div class="graph_container_outer_img">
              <div class="graph_img-inner">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/XfqOB4hvxlY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZPyj46ZHWFY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
               </div>
