embed youtube links using youtube api

--- a/myproject/website/templates/website/learn/wedge.html
+++ b/myproject/website/templates/website/learn/wedge.html
@@ -26,7 +26,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat error quas nostrum cumque dignissimos deserunt! Consectetur expedita quisquam rerum aliquam iusto neque fugit consequuntur eaque iste! Ducimus accusantium cum eveniet?</p>
     </div>
     <div class="video_about">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/XfqOB4hvxlY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+         <iframe width="100%" height="400" src="https://www.youtube.com/embed/ef1fg8kaTO0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     </div> -->
 
     <body>
@@ -54,7 +55,8 @@
             </div>
              <div class="graph_container_outer_img">
              <div class="graph_img-inner">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/XfqOB4hvxlY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="100%" height="400" src="https://www.youtube.com/embed/ef1fg8kaTO0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
             </div>
         </div>
               </div>
