pictures and detailed content added

--- a/myproject/website/templates/website/learn.html
+++ b/myproject/website/templates/website/learn.html
@@ -43,7 +43,7 @@
             <!-- Flag -->
             <li>
                 <a  href="{% url 'flag' %}"  class="card">
-                    <img src="{{ MEDIA_URL }}/media/images/flaggraph.png" class="card__image" alt="" />
+                  <img src="{{ MEDIA_URL }}/media/images/flag.png" class="card__image" alt="" />
                   <div class="card__overlay">
                     <div class="card__header">
                       <div class="card__header-text">
@@ -110,7 +110,7 @@
 
               <li>
                 <a href="{% url 'symmetrical' %}" class="card">
-                  <img src="{{MEDIA_URL}}/media/images/symmetrical_triangle.png"class="card__image" alt=""/>
+                  <img src="{{ MEDIA_URL }}/media/images/symmetrical.png" class="card__image" alt="" />
                   <div class="card__overlay">
                     <div class="card__header">
                       <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
