--- a/myproject/website/templates/website/learn/flag.html
+++ b/myproject/website/templates/website/learn/flag.html
@@ -44,8 +44,11 @@
             </div>
             <div class="graph_par">
             <p class="graph_p">
-            Cupiditate alias odio omnis minima veritatis saepe porro, repellendus natus vitae, sequi exercitationem ipsam, qui possimus sit eveniet laborum sapiente quisquam quae neque velit? 
-            </p>
+                The flag pattern is a bullish continuation pattern that forms after a strong price movement, followed by a period of consolidation.
+                It is characterized by a small rectangular or parallelogram-shaped consolidation area, known as the "flag," which slopes against the prevailing trend.
+                Flags are typically short-term patterns that can last from a few days to a few weeks.
+                Flags signal a temporary pause or consolidation before the price trend resumes in the direction of the original flagpole.
+                Confirmation of the pattern is sought through a breakout above or below the flag pattern, followed by sustained price movement in the direction of the breakout, using proper risk management techniques and additional analysis to confirm the pattern. Price targets can be estimated using the flagpole height as a measure.            </p>
             </div>
             <div class="graph_btns">
             <button class='graph_btns_more'> See more </button>
