--- a/myproject/website/templates/website/learn/symmetrical.html
+++ b/myproject/website/templates/website/learn/symmetrical.html
@@ -44,8 +44,11 @@
             </div>
             <div class="graph_par">
             <p class="graph_p">
-            Cupiditate alias odio omnis minima veritatis saepe porro, repellendus natus vitae, sequi exercitationem ipsam, qui possimus sit eveniet laborum sapiente quisquam quae neque velit? 
-            </p>
+                A symmetrical triangle is a technical chart pattern that occurs when there is a period of indecision in the market, resulting in a tightening of price ranges.
+                The symmetrical triangle pattern is formed by drawing two converging trendlines that intersect at a point, with the price of the stock oscillating between these trendlines.
+                The symmetrical triangle pattern is a neutral pattern, indicating that there is an equal chance of the stock price breaking out in either direction.
+                Traders often look for confirmation of the pattern by waiting for a breakout above or below the symmetrical triangle formation's trendlines, which signals a potential continuation of the stock's upward or downward trend.
+                Proper risk management, including setting stop-loss orders and using position sizing, is essential when trading symmetrical triangle patterns, as there is always a risk of a false breakout or reversal.            </p>
             </div>
             <div class="graph_btns">
             <button class='graph_btns_more'> See more </button>
