--- a/myproject/website/templates/website/learn/ascending.html
+++ b/myproject/website/templates/website/learn/ascending.html
@@ -11,8 +11,6 @@
 	<link href="https://api.fontshare.com/v2/css?f[]=clash-display@400&display=swap" rel="stylesheet">
 	<link href="https://api.fontshare.com/v2/css?f[]=technor@900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
-</head>
 <body>
 <!-- 
     <div class="nav">
@@ -44,8 +42,11 @@
             </div>
             <div class="graph_par">
             <p class="graph_p">
-            Cupiditate alias odio omnis minima veritatis saepe porro, repellendus natus vitae, sequi exercitationem ipsam, qui possimus sit eveniet laborum sapiente quisquam quae neque velit? 
-            </p>
+                The ascending triangle is a bullish continuation pattern that forms on a price chart, characterized by a horizontal resistance line and an upward-sloping trendline for support.
+                The horizontal resistance line is formed by connecting multiple price highs, while the upward-sloping trendline is formed by connecting higher lows.
+                The pattern indicates that buyers are gradually gaining strength as price consolidates near the resistance level, and a breakout above the resistance line is anticipated.
+                Confirmation of the pattern is sought through a breakout above the resistance line, accompanied by an increase in trading volume, indicating potential increased buying pressure.
+                Price targets can be estimated by measuring the height of the triangle pattern and adding it to the breakout point, while implementing proper risk management techniques and considering other technical indicators or fundamental analysis for confirmation.            </p>
             </div>
             <div class="graph_btns">
             <button class='graph_btns_more'> See more </button>
