--- a/myproject/website/templates/website/learn/head.html
+++ b/myproject/website/templates/website/learn/head.html
@@ -44,8 +44,12 @@
             </div>
             <div class="graph_par">
             <p class="graph_p">
-            Cupiditate alias odio omnis minima veritatis saepe porro, repellendus natus vitae, sequi exercitationem ipsam, qui possimus sit eveniet laborum sapiente quisquam quae neque velit? 
-            </p>
+
+                The head and shoulders pattern is a bearish reversal pattern that is often seen in stock charts.
+                The pattern is formed when the stock price rises to a peak (the left shoulder), then drops and rises again to a higher peak (the head), and then drops again to a level similar to the left shoulder (the right shoulder).
+                The neckline is a horizontal line that connects the lows of the left and right shoulders.
+                Traders often look for confirmation of the pattern by waiting for a breakout below the neckline, which signals a potential continuation of the stock's downward trend.
+                Proper risk management, including setting stop-loss orders and using position sizing, is essential when trading head and shoulders patterns, as there is always a risk of a false breakout or reversal. It is also important to note that the pattern is not foolproof and may not work in all market conditions.            </p>
             </div>
             <div class="graph_btns">
             <button class='graph_btns_more'> See more </button>
