--- a/myproject/website/templates/website/predict.html
+++ b/myproject/website/templates/website/predict.html
@@ -26,9 +26,9 @@
     </div>
     <div class="button-container">
     <div class="multi-button">
-        <button class="btn-primary" onclick="window.location.href='{% url 'learn' %}'">Tata</button>
-<button class="btn-secondary" onclick="window.location.href='{% url 'learn' %}'">Reliance</button>
-<button class="btn-secondary-custom" onclick="window.location.href='{% url 'learn' %}'">ITC</button>
+        <button class="btn-primary" onclick="window.location.href='{% url 'tata' %}'">Tata</button>
+<button class="btn-secondary" onclick="window.location.href='{% url 'reliance' %}'">Reliance</button>
+<button class="btn-secondary-custom" onclick="window.location.href='{% url 'itc' %}'">ITC</button>
 
         
         </div>
