--- a/myproject/website/templates/website/predict/Reliance.html
+++ b/myproject/website/templates/website/predict/Reliance.html
@@ -12,7 +12,7 @@
 	<link href="https://api.fontshare.com/v2/css?f[]=technor@900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
-    <title>Predict </title>
+    <title>Reliance </title>
 </head>
 <body class="body_predict">
     <div class="nav">
@@ -22,7 +22,11 @@
     </div>
     <div class="content_predict">
         <h1>Stock-Prediction</h1>
-        <p>This is the MACS</p>
+        
+        <p>This is the MACD : Mean Average Continuation Diffrenciation For Reliance group </p>
+        <img src="{{ MEDIA_URL }}/media/images/Reliance.png" class="graph_image" alt="" />    
+    
+    
     </div>
 
      
