--- a/myproject/website/templates/website/learn/head.html
+++ b/myproject/website/templates/website/learn/head.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     {% load static %}
+    <title>head</title>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
