--- a/myproject/website/templates/website/home.html
+++ b/myproject/website/templates/website/home.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'website/style.css' %}">
 	<script type="text/javascript" src="{% static 'website/script.js' %}"></script>
 	<link href="https://api.fontshare.com/v2/css?f[]=clash-display@400&display=swap" rel="stylesheet">
+	<link rel="icon" href="{{ MEDIA_URL }}/media/images/logo.png"  type="image/png">
 	<link href="https://api.fontshare.com/v2/css?f[]=technor@900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
