--- a/myproject/website/templates/website/learn/double.html
+++ b/myproject/website/templates/website/learn/double.html
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'website/style.css' %}">
+    <link rel="icon" href="{{ MEDIA_URL }}/media/images/logo.png"  type="image/png">
+
 	<script type="text/javascript" src="{% static 'website/script.js' %}"></script>
 	<link href="https://api.fontshare.com/v2/css?f[]=clash-display@400&display=swap" rel="stylesheet">
 	<link href="https://api.fontshare.com/v2/css?f[]=technor@900&display=swap" rel="stylesheet">
